feat: реализовать типизированные интеграции
